--- a/templates/index.html
+++ b/templates/index.html
@@ -16,15 +16,15 @@
     <br>
 
     <!-- Capture & Filters -->
-    <button onclick="capturePhoto()" id="captureButton" class="button-27">start</button>
-    <button class="cta" onclick="capturePhoto()" id="captureButton">
+    <button onclick="capturePhoto()" id="captureButton" class="button">start</button>
+    <!--- <button class="cta" onclick="capturePhoto()" id="captureButton">
         <span>start</span>
         <svg width="15px" height="10px" viewBox="0 0 13 10">
           <path d="M1,5 L11,5"></path>
           <polyline points="8 1 12 5 8 9"></polyline>
         </svg>
       </button>
-    <!---
+      
     <select id="filterSelect" class="libre-caslon-text-regular">
         <option value="original">Original</option>
         <option value="grayscale">Grayscale</option>
