fliped preview feed and saved imgs, font/button style changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body id = 'grad'>
-    <h1 class="libre-caslon-text-regular">photobooth</h1>
+    <h1 class="heading">photobooth &#x2661;</h1>
     <h2 id="CD" class="libre-caslon-text-regular">Ready?</h2>
 
     <!-- Live Camera Feed -->
