--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap');
 .libre-caslon-text-regular {
     font-family: "Libre Caslon Text", serif;
     font-weight: 400;
@@ -16,6 +17,92 @@
     font-weight: 400;
     font-style: italic;
 }
+
+.ibm-plex-mono-thin {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.ibm-plex-mono-extralight {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.ibm-plex-mono-light {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.ibm-plex-mono-regular {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ibm-plex-mono-medium {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.ibm-plex-mono-semibold {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.ibm-plex-mono-bold {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.ibm-plex-mono-thin-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.ibm-plex-mono-extralight-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.ibm-plex-mono-light-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.ibm-plex-mono-regular-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.ibm-plex-mono-medium-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.ibm-plex-mono-semibold-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.ibm-plex-mono-bold-italic {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 700;
+  font-style: italic;
+}
+
+
   
 body {
     text-align: center;
@@ -23,11 +110,14 @@ body {
 }
 #grad {
     background-image: radial-gradient(pink, rgb(255, 227, 232), white);
-  }
+}
+.heading {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
 video, img {
-    border: 5px solid black;
-    border-radius: 10px;
-    box-shadow: 0 0px 20px rgba(0, 0, 0, 0.4);;
+  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.4);;
 }
 .photo-container {
     display: flex;
@@ -44,14 +134,17 @@ button {
     padding: 10px 15px;
     font-size: 16px;
     cursor: pointer;
-    font-family: "Libre Caslon Text", serif;
+    font-family: "IBM Plex Mono", monospace;
+    font-weight: 100;
+    font-style: normal;
+    margin-top: 20px;
 }
     
 
 .button {
   cursor: pointer;
   position: relative;
-  padding: 10px 24px;
+  padding: 7px 24px;
   font-size: 18px;
   color: rgb(0, 0, 0);
   border: 2px solid rgb(0, 0, 0);
@@ -72,7 +165,7 @@ button {
   border-radius: inherit;
   scale: 0;
   z-index: -1;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -81,9 +174,9 @@ button {
 }
 
 .button:hover {
-  color: rgba(255, 255, 255, 0.877);
+  color: rgba(0, 0, 0, 0.877);
   scale: 1.1;
-  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0px 20px rgba(255, 255, 255);
 }
 
 .button:active {
