--- a/static/display.css
+++ b/static/display.css
@@ -47,6 +47,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 70px 0;
+    padding-left: 20px;
+
 }
 
 button {
@@ -105,5 +108,26 @@ button {
     border: 2px solid rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     color: rgba(0, 0, 0, 0.15);
+}
+
+.customizations {
+    padding: 10px;
+    flex-direction: flex-start  ;
+}
+
+label {
+    padding: 5px;
+}
+
+input[type=color] {
+  border: none;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.0);
+}
+
+input[type=text] {
+  border: none;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.0);
 }
 
